--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,12 +30,23 @@ header {
     width: 100%;
     height: 600px;
     background: #56ab2f;
-    background: -webkit-linear-gradient(to right, hsla(73, 93%, 35%, 0.605), hsla(68, 94%, 41%, 0.605)), url(../img/ballenas_fondo_inicial.jpg);
-    background: linear-gradient(to right, hsla(73, 93%, 35%, 0.605), hsla(68, 94%, 41%, 0.605)), url(../img/ballenas_fondo_inicial.jpg);
+    background: -webkit-linear-gradient(to right, hsla(73, 93%, 35%, 0.605), hsla(68, 94%, 41%, 0.605)), url(../img/fondo_dos_ron.jpg);
+    background: linear-gradient(to right, hsla(73, 93%, 35%, 0.605), hsla(68, 94%, 41%, 0.605)), url(../img/fondo_dos_ron.jpg);
     background-size: cover ;
     background-attachment: fixed;
     position: relative;
-}
+    }
+
+    header .textos-header{
+        display: flex;
+        flex-direction: column;
+        height: 430px;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .tex
 
 nav{
     text-align: right;
@@ -51,3 +62,9 @@ nav a {
 nav a:hover {
     text-decoration:underline;
     }
+
+.wave{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
