--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,70 +1,287 @@
-* {
+*{
     margin: 0;
-    padding: 0%;
+    padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+body{
+    font-family: 'Indie Flower', cursive;
 }
 
-.contenedor {
-    padding: 60px 0;
-    width: 90%;
-    max-width: 1000px;
+.contenedor{
+    padding: 80px 0;
+    width: 900%;
+    max-width: 1300px;
     margin: auto;
     overflow: hidden;
 }
 
-.titulo {
-    color: #b16c13;
-    font-size: 30px;
+.titulo{
+    color: #b38e8e;
+    font-size: 40px;
     text-align: center;
     margin-bottom: 30px;
-
 }
 
 /*Header*/
 
-header {
+header{
     width: 100%;
     height: 600px;
-    background: #56ab2f;
-    background: -webkit-linear-gradient(to right, hsla(73, 93%, 35%, 0.605), hsla(68, 94%, 41%, 0.605)), url(../img/fondo_dos_ron.jpg);
-    background: linear-gradient(to right, hsla(73, 93%, 35%, 0.605), hsla(68, 94%, 41%, 0.605)), url(../img/fondo_dos_ron.jpg);
-    background-size: cover ;
+    background: #ffffff;
+    background: -webkit-linear-gradient(to right, hsl(353, 100%, 93%, 0.60) ,  hsl(352, 71%, 77%, 0.60)), url(../img/fondo_dos_ron.jpg);
+    background: linear-gradient(to right, hsl(353, 100%, 93%, 0.60) ,  hsl(352, 71%, 77%, 0.60)), url(../img/fondo_dos_ron.jpg);
+    background-size: cover;
     background-attachment: fixed;
     position: relative;
-    }
-
-    header .textos-header{
-        display: flex;
-        flex-direction: column;
-        height: 430px;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .tex
+}
 
 nav{
     text-align: right;
     padding: 30px 50px 0 0;
+    font-size: 20px;
 }
 
-nav a {
-    color: white;
-    font-weight: 300;
+nav > a {
+    color: #534142;
+    font-weight: 400;
     text-decoration: none;
     margin-right: 10px;
 }
-nav a:hover {
-    text-decoration:underline;
-    }
 
-.wave{
+nav a:hover {
+    text-decoration: underline;
+}
+
+
+.wave {
     position: absolute;
     bottom: 0;
     width: 100%;
+}
+
+header .textos-header{
+    display: flex;
+    height: 430px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+.textos-header h1 {
+    font-size: 50px;
+    color: #534141;
+}
+
+.textos-header h2 {
+    font-size: 30px;
+    font-weight: 300;
+    color: #534141;
+}
+
+.contenedor-sobre-nosotros{
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.imagen-inicio{
+    width: 40%;
+    height: 600px;
+}
+
+.sobre-nosotros .contenido-textos{
+    width: 48%;
+}
+
+.contenido-textos h3{
+    margin-bottom: 30px;
+}
+
+.contenido-textos h3 span {
+    background: #b38e8e;
+    color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    text-align:center;
+    width: 30px;
+    height: 30px;
+    padding: 2px;   
+    box-shadow: 0 0 6px 0 rgba(34, 12, 0, 0.5);
+    margin-right: 5px;
+}
+
+
+.contenido-textos p{
+    padding: 0px 0px 30px 15px;
+    font-weight: 300;
+    text-align: justify;
+}
+
+.portafolio{
+    background: #f2f2f2;
+}
+
+.galeria-port{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.imagen-port{
+    width: 40%;
+    margin-bottom: 10px;
+    height: 500px;
+    overflow: -moz-hidden-unscrollable;
+    position: relative;
+    cursor: pointer; 
+    transition: all 300ms;   
+}
+
+.imagen-port > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.imagen-port:hover{
+    transform: scale(1.15);
+    align-content: center;
+}
+
+.hover-galeria{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition-duration: 300ms;
+
+}
+
+.hover-galeria img{
+    width: 100%;    
+}
+
+.hover-galeria p{
+    color: #fff;
+}
+
+.imagen-port:hover .hover-galeria{
+    opacity: 100%;
+    align-items: center;
+
+}
+
+
+
+/* Clientes */
+
+.cards{
+display: flex;
+justify-content: space-evenly;
+}
+
+.card{
+display: flex;
+justify-content: space-evenly;
+background:#534141 ;
+background: rgba(220, 170, 176);
+/*background: linear-gradient(to right, rgb(149, 77, 86), rgba(220, 170, 176));*/
+width: 20%;
+height: 90px;
+align-items: center;
+border-radius: 5px;
+}
+
+.cards .card img{
+    width: 30%;
+    height: 80px;
+    object-fit: cover;
+    display: block;
+}
+
+.cards .card .contenido_texto_card{
+    width: 60%;
+    color: #fff;
+    padding-left: 30px;
+}
+.cards .card .contenido_texto_card a{
+    font-weight: 100;
+    padding-top: 5px;
+}
+
+
+.Nuestros-Servicios{
+    background: #f2f2f2;
+    padding-bottom: 30px;
+}
+
+.servicio-cont{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.servicio-ind{
+    width: 28%;
+    text-align: center;
+}
+
+.servicio-ind img{
+    width: 100%;
+}
+
+.servicio-ind h3{
+    margin: 10px 0;  
+}
+
+.servicio-ind p{
+    font-weight: 300;
+    text-align: justify;
+}
+
+footer{
+    background-color: hsla(352, 71%, 77%);
+    padding: 60px 0 30px 0;
+    margin: auto;
+    overflow: hidden;
+}
+
+.contenedor-footer{
+    display: flex;
+    width: 90%;
+    justify-content: space-evenly;
+    margin: auto;
+    padding-bottom: 50px;
+    border-bottom: 1px solid #ccc;
+}
+
+.contenet-foo p{
+    text-align: center;
+    color: #f2f2f2;
+}
+
+.contenet-foo h4{
+    color: #ffffff;
+    border-bottom: 1px solid #f2f2f2;
+    font-size: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+
+}
+.Titulo-final{
+    color: rgb(184, 120, 129);
+    font-size: 24px;
+    margin-bottom: 10px;
+    text-align: center;
 }
