--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,22 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Indie Flower', cursive;
 }
 
-.contenedor{
+.contenedor {
     padding: 80px 0;
-    width: 900%;
+    width: 100%;
     max-width: 1300px;
     margin: auto;
     overflow: hidden;
 }
 
-.titulo{
+.titulo {
     color: #b38e8e;
     font-size: 40px;
     text-align: center;
@@ -25,24 +25,24 @@ body{
 
 /*Header*/
 
-header{
+header {
     width: 100%;
     height: 600px;
     background: #ffffff;
-    background: -webkit-linear-gradient(to right, hsl(353, 100%, 93%, 0.60) ,  hsl(352, 71%, 77%, 0.60)), url(../img/fondo_dos_ron.jpg);
-    background: linear-gradient(to right, hsl(353, 100%, 93%, 0.60) ,  hsl(352, 71%, 77%, 0.60)), url(../img/fondo_dos_ron.jpg);
+    background: -webkit-linear-gradient(to right, hsl(353, 100%, 93%, 0.60), hsl(352, 71%, 77%, 0.60)), url(../img/fondo_dos_ron.jpg);
+    background: linear-gradient(to right, hsl(353, 100%, 93%, 0.60), hsl(352, 71%, 77%, 0.60)), url(../img/fondo_dos_ron.jpg);
     background-size: cover;
     background-attachment: fixed;
     position: relative;
 }
 
-nav{
+nav {
     text-align: right;
     padding: 30px 50px 0 0;
     font-size: 20px;
 }
 
-nav > a {
+nav>a {
     color: #534142;
     font-weight: 400;
     text-decoration: none;
@@ -60,7 +60,7 @@ nav a:hover {
     width: 100%;
 }
 
-header .textos-header{
+header .textos-header {
     display: flex;
     height: 430px;
     width: 100%;
@@ -81,22 +81,23 @@ header .textos-header{
     color: #534141;
 }
 
-.contenedor-sobre-nosotros{
+.contenedor-sobre-nosotros {
     display: flex;
     justify-content: space-evenly;
 
 }
 
-.imagen-inicio{
+.imagen-inicio {
     width: 40%;
     height: 600px;
 }
 
-.sobre-nosotros .contenido-textos{
+.sobre-nosotros .contenido-textos {
     width: 48%;
+
 }
 
-.contenido-textos h3{
+.contenido-textos h3 {
     margin-bottom: 30px;
 }
 
@@ -105,54 +106,54 @@ header .textos-header{
     color: #fff;
     border-radius: 50%;
     display: inline-block;
-    text-align:center;
+    text-align: center;
     width: 30px;
     height: 30px;
-    padding: 2px;   
+    padding: 2px;
     box-shadow: 0 0 6px 0 rgba(34, 12, 0, 0.5);
     margin-right: 5px;
 }
 
 
-.contenido-textos p{
+.contenido-textos p {
     padding: 0px 0px 30px 15px;
     font-weight: 300;
     text-align: justify;
 }
 
-.portafolio{
+.portafolio {
     background: #f2f2f2;
 }
 
-.galeria-port{
+.galeria-port {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
-.imagen-port{
+.imagen-port {
     width: 40%;
     margin-bottom: 10px;
     height: 500px;
     overflow: -moz-hidden-unscrollable;
     position: relative;
-    cursor: pointer; 
-    transition: all 300ms;   
+    cursor: pointer;
+    transition: all 300ms;
 }
 
-.imagen-port > img{
+.imagen-port>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
 }
 
-.imagen-port:hover{
+.imagen-port:hover {
     transform: scale(1.15);
     align-content: center;
 }
 
-.hover-galeria{
+.hover-galeria {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -167,15 +168,15 @@ header .textos-header{
 
 }
 
-.hover-galeria img{
-    width: 100%;    
+.hover-galeria img {
+    width: 100%;
 }
 
-.hover-galeria p{
+.hover-galeria p {
     color: #fff;
 }
 
-.imagen-port:hover .hover-galeria{
+.imagen-port:hover .hover-galeria {
     opacity: 100%;
     align-items: center;
 
@@ -185,79 +186,79 @@ header .textos-header{
 
 /* Clientes */
 
-.cards{
-display: flex;
-justify-content: space-evenly;
+.cards {
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.card{
-display: flex;
-justify-content: space-evenly;
-background:#534141 ;
-background: rgba(220, 170, 176);
-/*background: linear-gradient(to right, rgb(149, 77, 86), rgba(220, 170, 176));*/
-width: 20%;
-height: 90px;
-align-items: center;
-border-radius: 5px;
+.card {
+    display: flex;
+    justify-content: space-evenly;
+    background: #534141;
+    background: rgba(220, 170, 176);
+    width: 20%;
+    height: 90px;
+    align-items: center;
+    border-radius: 5px;
 }
 
-.cards .card img{
+.cards .card img {
     width: 30%;
     height: 80px;
     object-fit: cover;
     display: block;
 }
 
-.cards .card .contenido_texto_card{
+.cards .card .contenido_texto_card {
     width: 60%;
     color: #fff;
     padding-left: 30px;
 }
-.cards .card .contenido_texto_card a{
+
+.cards .card .contenido_texto_card a {
     font-weight: 100;
     padding-top: 5px;
 }
 
 
-.Nuestros-Servicios{
+.Nuestros-Servicios {
     background: #f2f2f2;
     padding-bottom: 30px;
 }
 
-.servicio-cont{
+.servicio-cont {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
-.servicio-ind{
+.servicio-ind {
     width: 28%;
     text-align: center;
 }
 
-.servicio-ind img{
+.servicio-ind img {
     width: 100%;
 }
 
-.servicio-ind h3{
-    margin: 10px 0;  
+.servicio-ind h3 {
+    margin: 10px 0;
 }
 
-.servicio-ind p{
+.servicio-ind p {
     font-weight: 300;
     text-align: justify;
 }
 
-footer{
+footer {
     background-color: hsla(352, 71%, 77%);
     padding: 60px 0 30px 0;
     margin: auto;
     overflow: hidden;
 }
 
-.contenedor-footer{
+.contenedor-footer {
     display: flex;
     width: 90%;
     justify-content: space-evenly;
@@ -266,12 +267,12 @@ footer{
     border-bottom: 1px solid #ccc;
 }
 
-.contenet-foo p{
+.contenet-foo p {
     text-align: center;
     color: #f2f2f2;
 }
 
-.contenet-foo h4{
+.contenet-foo h4 {
     color: #ffffff;
     border-bottom: 1px solid #f2f2f2;
     font-size: 20px;
@@ -279,9 +280,148 @@ footer{
     text-align: center;
 
 }
-.Titulo-final{
+
+.Titulo-final {
     color: rgb(184, 120, 129);
     font-size: 24px;
     margin-bottom: 10px;
     text-align: center;
+}
+
+@media screen and (max-width :900px) {
+
+    header {
+        background-position: center;
+    }
+
+    .contenedor-sobre-nosotros {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contenedor-sobre-nosotros .contenido-textos {
+        width: 95%;
+
+    }
+
+    .contenedor-sobre-nosotros img {
+        width: 40%;
+        height: auto;
+    }
+
+    .imagen-port {
+        width: 80%;
+        height: auto;
+
+    }
+
+    .cards {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cards .card {
+        width: 50%;
+        height: auto;
+        margin-bottom: 30px;
+        flex-direction: column;
+    }
+
+    .cards .card:first-child {
+        margin-bottom: 30px;
+    }
+
+    .cards .card img {
+        width: 40%;
+        height: auto;
+        margin: 5px;
+
+    }
+
+    .contenido_texto_card {
+        align-items: center;
+        text-align: center;
+
+    }
+
+    .servicio-cont {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .servicio-ind {
+        width: 90%;
+        text-align: center;
+    }
+
+    .servicio-ind:nth-child(1),
+    .servicio-ind:nth-child(2) {
+        margin-bottom: 60px;
+    }
+
+    .servicio-ind img {
+        width: 70%;
+        height: auto;
+
+    }
+
+    .contenedor-footer {
+        flex-direction: column;
+    }
+
+    .contenet-foo:nth-child(1),
+    .contenet-foo:nth-child(2) {
+        margin-bottom: 40px;
+    }
+
+
+    .contenet-foo h4 {
+        border: none;
+    }
+}
+
+@media screen and (max-width:500px) {
+
+    .titulo{
+        font-size: 25px;
+    }
+
+nav{
+    text-align: center;
+    padding: 30px;  
+    
+}
+
+nav> a{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 15px;
+
+    }
+
+.textos-header h1{
+    font-size: 30px;
+}
+.textos-header h2{
+    font-size: 20px;
+}
+
+
+.cards .card{
+    width: 100%;
+}
+
+.cards .contenido_texto_card{
+    text-align: center;
+}
+
+.servicio-cont img{
+    width: 100%;
+}
+
+.Titulo-final{
+    font-size: 15px;
+}
 }
